cambios en recinto

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,5 +5,4 @@
 @import 'variables';
 
 // Bootstrap
-//@import '~bootstrap/scss/bootstrap';
-@import '~bulma/bulma';
+@import '~bootstrap/scss/bootstrap';
